# pwauth

./: .travis.yml  CHANGES  Makefile.am  README  checkfaillog.c  configure.ac  pwauth.man
debian/: changelog  copyright
pwauth/: INSTALL  Makefile  Makefile.am  README  auth_pam.c  config.h  configure.ac
pwauth/debian/: control  pwauth.manpages  rules
pwauth/debian/tests/: control
